# lojo_utils

./: .gitignore  CMakeLists.txt  README.md  example.c
cmake/: lojo_utils_config.cmake.in
include/: lojo_core_utils.h  lojo_str_utils.h
src/: lojo_core_utils.c  lojo_str_utils.c  lojo_utils.c
